[gd_scene load_steps=2 format=3 uid="uid://cgc88a7j8fowj"]

[ext_resource type="Script" path="res://scripts/ui/log_viewer/components/log_entry.gd" id="1_xxxxx"]

[node name="LogEntry" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxxxx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="lbl_Timestamp" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2024-03-14 12:00:00"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="lbl_Level" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "INFO"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="lbl_Source" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "System"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="lbl_Message" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Log message goes here" 